--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <section id="main_content">
         <h3>
 <a id="chronicling-the-idiots-running-india" class="anchor" href="#chronicling-the-idiots-running-india" aria-hidden="true"><span class="octicon octicon-link"></span></a>Chronicling the idiots "running" India</h3>
+      
+      <ul>
+        <li><a href="http://www.bbc.com/news/world-asia-india-34580476">Australian's Hindu tattoo sparks row in India</a></li>
+      </ul>
       </section>
     </div>
 
