--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       
       <ul>
         <li><a href="http://www.bbc.com/news/world-asia-india-34580476">Australian's Hindu tattoo sparks row in India</a></li>
+        <li><a href="http://www.bbc.com/news/world-asia-india-34599849">India beef lynching premeditated, says inquiry</a></li>
       </ul>
       </section>
     </div>
